Nginx/nginx-ingress-with-auth.yaml
## Nginx ingress with services required authentication
##
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-test
  namespace: example
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
        gzip on;
        gzip_disable "MSIE [1-6]\.";
        gzip_vary on;        

        # Whitelist IPs rule
        # Blocks all except listed IPs
        set_real_ip_from 0.0.0.0/0;
        real_ip_header X-Forwarded-For;
        real_ip_recursive on;
        set $allow false;   
        
        if ($remote_addr ~ "(120.72.109.2|113.172.87.235)") {
            set $allow true;
        }
        if ($allow = false) {
            return 403;
        }
        
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: htpasswd
    # nginx.ingress.kubernetes.io/auth-realm: "Enter your credentials"

spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:        
        - example.com
      secretName: secret-tls
  rules:  
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: example-service
            port:
              number: 80
